--- a/app/views/admin/dashboard/show.html.haml
+++ b/app/views/admin/dashboard/show.html.haml
@@ -40,5 +40,7 @@
                 - if subscription.is_stripe?
                   (#{number_to_currency((subscription.plan.amount/100.0), unit: '€')})
 
-:markdown
-  Brian's shame: <code>#{ number_to_currency(@shame_mrr, unit: '€') }</code>
+.block.-mt2
+  .block.-bg-faint.-p2
+    :markdown
+      Brian's shame: <code>#{ number_to_currency(@shame_mrr, unit: '€') }</code>
