really circuitous and silly way to delete users

--- a/app/assets/stylesheets/admin/_admin-table.sass
+++ b/app/assets/stylesheets/admin/_admin-table.sass
@@ -8,6 +8,10 @@
 
   td
     font-size: var(--t5)
+  
+  tr.-deleted
+    td:first-of-type
+      text-decoration: line-through
 
   tr.placeholder
     height: 1px
@@ -28,3 +32,4 @@
       tr:first-child
         td:first-child
           font-weight: 600
+          
