--- a/app/assets/stylesheets/shared/_block.sass
+++ b/app/assets/stylesheets/shared/_block.sass
@@ -24,6 +24,9 @@
   &.-bg-blue
     color: var(--default)
     background-color: var(--blue)
+  &.-bg-red
+    color: var(--white)
+    background-color: var(--red)
   &.-bg-default
     color: var(--black)
     background-color: var(--default)
