--- a/app/assets/stylesheets/shared/_button.sass
+++ b/app/assets/stylesheets/shared/_button.sass
@@ -33,6 +33,8 @@
     &.-big
       padding: 1.5rem 3rem
       font-weight: 600
+      background-color: var(--red)
+      color: var(--white)
 
   &.-yellow
     background: var(--yellow)
