--- a/app/views/admin/subscriptions/new.html.haml
+++ b/app/views/admin/subscriptions/new.html.haml
@@ -6,7 +6,7 @@
       = link_to 'Subscription', [:new, :admin, @user, :subscription]
 
     %nav
-      = link_to "Cancel without saving", [:admin, @user], class: 'button''button -cancel'
+      = link_to "Cancel without saving", [:admin, @user], class: 'button -cancel'
       = link_to "Save", [:admin, @user], class: 'button', 'data-action': 'submitForm'
 
 = render partial: 'admin/subscriptions/form', locals: { subscription: @subscription }
