--- a/app/views/admin/users/new.html.haml
+++ b/app/views/admin/users/new.html.haml
@@ -5,7 +5,7 @@
       = link_to 'New user', [:new, :admin, :user]
 
     %nav
-      = link_to "Cancel without saving", [:admin, :users], class: 'button''button -cancel'
+      = link_to "Cancel without saving", [:admin, :users], class: 'button -cancel'
       = link_to "Save", [:admin, :users], class: 'button', 'data-action': 'submitForm'
 
 = render partial: 'admin/users/form', locals: {user: @user}
