--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -6,7 +6,7 @@
       = link_to 'Edit', [:edit, :admin, @user]
 
     %nav
-      = link_to "Cancel without saving", [:admin, @user], class: 'button''button -cancel'
+      = link_to "Cancel without saving", [:admin, @user], class: 'button -cancel'
       = link_to "Save", [:admin, @user], class: 'button', 'data-action': 'submitForm'
 
 = render partial: 'admin/users/form', locals: {user: @user}
