more actionable dash

--- a/app/views/admin/dashboard/show.html.haml
+++ b/app/views/admin/dashboard/show.html.haml
@@ -27,13 +27,13 @@
                   (#{number_to_currency((subscription.plan.amount/100.0), unit: '€')})
 
     .col-xs-12.col-md-4
-      - cache ['admin', 'dashboard', @recent_churns] do
+      - cache ['admin', 'dashboard', @in_danger] do
         .block.-bg-faint.-p2
           .block.-bb.-pb1.-mb1
-            %h3= link_to "Recently churned", [:admin, :subscriptions]
+            %h3= link_to "Past due", [:admin, :subscriptions]
           
           .block
-            - @recent_churns.each do |subscription|
+            - @in_danger.each do |subscription|
               .p.-t5
                 .inline.c.-w6= link_to "· #{ subscription.user.email_address }:", [:admin, subscription]
                 #{ subscription.plan.is_print? ? 'Print' : 'Digital' }
