--- a/app/views/migration/welcome.html.haml
+++ b/app/views/migration/welcome.html.haml
@@ -14,6 +14,6 @@
 
         We're going to continue improving the site, so we appreciate your patience as we fix bugs, add features, and iterate on the design.
 
-        If you have any problems, suggestions, or just want to talk: email me at [brian@dublininquirer.com](mailto:brian@dublininquirer.com). I'll respond.
+        If you have any problems, suggestions, or just want to talk: email me at [info@dublininquirer.com](mailto:info@dublininquirer.com). I'll respond.
 
       = link_to raw("Go to the home page &rarr;"), :root, class: 'button -big'
