--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -113,7 +113,7 @@
 
           #### Is there a student/unwaged rate?
 
-          Nobody will be turned away for want of funds. If you're a student, not working, or otherwise unable to afford a subscription, send [us an email](mailto:brian@dublininquirer.com) and we'll see if we can work something out.
+          Nobody will be turned away for want of funds. If you're a student, not working, or otherwise unable to afford a subscription, send [us an email](mailto:info@dublininquirer.com) and we'll see if we can work something out.
 
           #### What is the cancellation policy?
 
