--- a/app/views/user_mailer/migrate_account_email.text.erb
+++ b/app/views/user_mailer/migrate_account_email.text.erb
@@ -4,7 +4,7 @@ Click this link to set up your new Dublin Inquirer account: <%= @url %>
 
 Thanks for your patience, and do let me know if you need any help.
 
-Brian
+Lois
 
 -
 
