--- a/app/views/user_mailer/reset_password_email.text.erb
+++ b/app/views/user_mailer/reset_password_email.text.erb
@@ -3,7 +3,7 @@ Hello,
 Click this link to set a password for your Dublin Inquirer account: <%= @url %>
 
 Let me know if you need any help,
-Brian
+Lois
 
 -
 
