--- a/app/views/admin/landing_pages/_form.html.haml
+++ b/app/views/admin/landing_pages/_form.html.haml
@@ -14,6 +14,6 @@
     .field
       = f.label :template
       = f.text_field :template
-      .hint (Leave blank unless you're Brian.)
+      .hint (Probably leave blank unless you're Brian.)
 
   .actions= f.submit 'Save', class: 'button'
