rm forgiven from invoices

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,9 +1,11 @@
+- set_meta_tags title: "Become a subscriber"
+
 .block.-pt4.-px2.-bg-image{style: "background-image: url('#{ asset_path "ads/cranes.jpg" }')"}
   .p.-centered
     .block.-pt2
       %h1.h.-h1.c.-serif Help our reporters<br>cover the important stories
 
-      .block.-mt2.p.-t3 Subscribe now for as little as €5 per month
+      .block.-mt2.p.-t3 Become a subscriber for as little as €5 per month
 
   .block.-mt4.-pull-down
     .wrapper.-large{role: 'layout'}
