rough + broken half implemented stripe form in svelte

--- a/app/assets/stylesheets/shared/_button.sass
+++ b/app/assets/stylesheets/shared/_button.sass
@@ -1,6 +1,7 @@
 .button, a.button, a.button:link, a.button:visited, input.button
   font-family: $sans
   -webkit-appearance: none
+  margin: 0
   border: 0
 
   &:hover
