--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -27,7 +27,7 @@
         :markdown
           Unlimited digital access to **DublinInquirer.com**, including our full archive, optimised for desktop and mobile.
 
-  #subscribe-form{data: {'fonts-url': asset_url('fonts.css')}}
+  #subscribe-form{data: {'action': subscriptions_path }}
 
   .block.-my4.-pb4
     .p.-t4.-sf.-centered
