--- a/app/views/layouts/snippets/_stripe.html.erb
+++ b/app/views/layouts/snippets/_stripe.html.erb
@@ -1,1 +1,2 @@
 <script src="https://js.stripe.com/v3/"></script>
+<meta name="stripe-public-key" content="<%= Rails.application.config.stripe[:publishable_key] -%>" />
