--- a/app/assets/stylesheets/shared/_button.sass
+++ b/app/assets/stylesheets/shared/_button.sass
@@ -22,6 +22,15 @@
       line-height: 1.5
       padding: 1.75rem 3.25rem
       font-weight: 800
+    
+    &:disabled, &[disabled]
+      background-color: var(--faint)
+      color: var(--grey)
+      border-color: var(--grey)
+      &:hover
+        cursor: default
+        background-color: var(--faint)
+        color: var(--grey)
 
   &.-red
     background: var(--red)
