very basic svelte form works with sca

--- a/app/assets/stylesheets/components/_block-form.sass
+++ b/app/assets/stylesheets/components/_block-form.sass
@@ -14,7 +14,7 @@
     color: var(--red)
 
   .actions
-    [type='submit']
+    [type='submit'], button
       width: 100%
       text-align: center
 
