--- a/app/assets/stylesheets/shared/_button.sass
+++ b/app/assets/stylesheets/shared/_button.sass
@@ -1,7 +1,8 @@
 .button, a.button, a.button:link, a.button:visited, input.button
   font-family: $sans
   -webkit-appearance: none
-  margin: 0
+  margin-left: 0
+  margin-right: 0
   border: 0
 
   &:hover
