--- a/app/views/users/payment.html.haml
+++ b/app/views/users/payment.html.haml
@@ -14,7 +14,7 @@
         :markdown
           We don't have a payment card on file for your account. Please enter your credit or debit card details below to avoid an interruption in your subscription.
 
-  #payment-form{data: {'action': payment_submit_user_path, user: @user_data.to_json}}
+  #payment-form{data: {'action': payment_submit_user_path}}
 
   .block.-my4.-py4
     .p.-t4.-sf.-centered
