--- a/app/views/articles/excerpts/_small.html.haml
+++ b/app/views/articles/excerpts/_small.html.haml
@@ -7,7 +7,7 @@
             .p.-t5.c.-w4= display_category(article.category)
 
           - if article.featured_artwork.image.present?
-            = image_tag article.featured_artwork.image.large.url
+            = image_tag article.featured_artwork.image.medium.url
 
       .p.-t4
         .block
