--- a/app/views/articles/excerpts/_half.html.haml
+++ b/app/views/articles/excerpts/_half.html.haml
@@ -5,7 +5,7 @@
         .overlay.block.-b.-bg-default.-px1
           .p.-t5.c.-w4= display_category(article.category)
         - if article.featured_artwork.image.present?
-          = image_tag article.featured_artwork.image.large.url
+          = image_tag article.featured_artwork.image.medium.url
 
     .row
       .col-xs-12.col-lg-6
