--- a/app/views/gift_subscriptions/thanks.html.haml
+++ b/app/views/gift_subscriptions/thanks.html.haml
@@ -8,7 +8,7 @@
 
     .p.-t3.-sf
       :markdown
-        Your gift subscription is confirmed. Thank you. We'll send a little card so you'll have something to give in person.
+        Your gift subscription is confirmed. Thank you. We'll be in touch shortly regarding logistics.
 
         If you have any problems, story suggestions, or just want to talk: email us at [info@dublininquirer.com](mailto:info@dublininquirer.com). We like talking to our readers!
 
