--- a/app/views/user_mailer/welcome_digital.text.erb
+++ b/app/views/user_mailer/welcome_digital.text.erb
@@ -1,4 +1,4 @@
-Hi <%= @given_name %>,
+Hi <%= @given_name.present? ? @given_name : 'there' %>,
 
 I just wanted to say thanks so much for subscribing to Dublin Inquirer. I really hope you enjoy reading the stories we tell each week, and if you've opted in to our newsletter then we'll keep you up-to-date with newsroom developments, and any offline activities through that, too.
 
