--- a/app/views/user_mailer/payment_failed.text.erb
+++ b/app/views/user_mailer/payment_failed.text.erb
@@ -1,6 +1,6 @@
 Hi <%= @given_name.present? ? @given_name : 'there' %>,
 
-We're having trouble charging your card for your Dublin Inquirer subscription. When you have a moment, please update your card details at https://www.dublininquirer.com/user/payment.
+We're having trouble charging your card for your Dublin Inquirer subscription. When you have a moment, please update your card details at this address: https://www.dublininquirer.com/user/payment
 
 If you have any questions, you can always reach me on this email or at 0873924796.
 
