--- a/app/views/articles/templates/_opinion.html.haml
+++ b/app/views/articles/templates/_opinion.html.haml
@@ -27,7 +27,7 @@
   - if article.featured_artwork.present?
     %section.content.-artwork
       %figure.artwork.-featured
-        = image_tag article.featured_artwork.image.large.url
+        = image_tag article.featured_artwork.image.medium.url
         %figcaption= article.featured_artwork.caption
 
   = raw render_content(article)
