--- a/app/views/issues/index.html.haml
+++ b/app/views/issues/index.html.haml
@@ -18,7 +18,7 @@
                     %li= link_to article.title, article.path
             .col-xs-12.col-md-3.col-md-offset-2
               = link_to issue do
-                %figure.artwork= image_tag issue.featured_article.featured_artwork.image.large.url
+                %figure.artwork= image_tag issue.featured_article.featured_artwork.image.small.url
         %hr.-stroke
 
     = render partial: 'layouts/pagination', locals: {page: @page, collection: @issues}
