--- a/app/views/authors/show.html.haml
+++ b/app/views/authors/show.html.haml
@@ -13,7 +13,7 @@
   - if @author.portrait.present?
     .block.-mt1
       %figure.artwork.-face
-        = image_tag @author.portrait.url
+        = image_tag @author.portrait.url, loading: 'lazy'
 
   - if @author.bio.present?
     .block.-mt1.p.-t3
