--- a/app/views/layouts/_primary-footer.html.haml
+++ b/app/views/layouts/_primary-footer.html.haml
@@ -33,6 +33,8 @@
                 = link_to "Erin McGuire", "/contributors/erin-mcguire"
                 <br>
                 = link_to "Aura McMenamin", "/contributors/aura-mcmenamin"
+                <br>
+                = link_to "Laoise Neylon", "/contributors/laoise-neylon"
 
         .col-xs-12.col-md-3
           .block.-mb4
