add christmastime helper

--- a/app/assets/stylesheets/modules/_variables.sass
+++ b/app/assets/stylesheets/modules/_variables.sass
@@ -34,6 +34,8 @@ $gutter: 4rem
   --yellow: #FCFC04
   --blue-dark: #2F00BF
 
+  --christmas-red: #A50D1B
+
   @media screen and (min-width: $small)
   @media screen and (min-width: $medium)
     --t2: 3.9rem
