--- a/app/assets/stylesheets/shared/_button.sass
+++ b/app/assets/stylesheets/shared/_button.sass
@@ -71,6 +71,19 @@
       background: var(--white)
       color: var(--blue)
 
+  &.-christmas
+    display: block
+    position: relative
+    background: var(--white)
+    color: var(--black)
+    border: 1px solid var(--black)
+    padding: 1.5rem 3rem
+    font-weight: 600
+    box-shadow: 0 0.25rem 1rem rgba(#000,0.125)
+    transition: all ease 0.25s
+    &:hover
+      transform: translateY(0.125rem)
+
 .text-button
   -webkit-appearance: none
   display: inline-block
