add incidental christmas ad

--- a/app/assets/stylesheets/modules/_variables.sass
+++ b/app/assets/stylesheets/modules/_variables.sass
@@ -22,9 +22,9 @@ $gutter: 4rem
   --baseline: 1rem
   --gutter: 4rem
 
-  --default: #fafafa
+  --default: #f2f2f2
   --white: #ffffff
-  --faint: #f4f4f4
+  --faint: #ececec
   --grey: #999
   --black: #070707
 
@@ -34,7 +34,7 @@ $gutter: 4rem
   --yellow: #FCFC04
   --blue-dark: #2F00BF
 
-  --christmas-red: #A50D1B
+  --christmas-red: rgba(150,32,32)
 
   @media screen and (min-width: $small)
   @media screen and (min-width: $medium)
