--- a/app/assets/stylesheets/shared/_block.sass
+++ b/app/assets/stylesheets/shared/_block.sass
@@ -250,7 +250,7 @@
     border-right: 1px solid var(--black)
 
   &.-hr
-    border-bottom: calc(0.75rem/2) solid var(--black)
+    border-bottom: 2px solid var(--black)
 
   &.-shadow
     box-shadow: 0 0.5rem 1rem rgba(#000,0.175)
